# docusearch

./: .gitignore  BACKLOG.md  CLAUDE.md  DEVELOPERS.md  GETTING_STARTED.md  LICENSE  README.md  SERVER-SETUP-GUIDE.md  docusearch.example.yaml  install.sh  pyproject.toml  start-server.sh
.claude/: settings.json
.claude/skills/bootstrap-docusearch/: SKILL.md
.claude/skills/docusearch/: SKILL.md
.claude/skills/write-data-parser/: SKILL.md
.claude/skills/write-data-report/: SKILL.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
agents/: CLAUDE.md  copilot-instructions.md  mcp.json
corpora/: MANIFEST.md  download.py
scripts/: run_benchmark.py  smoke.ps1  smoke.sh  stdf_books.py
src/docusearch/: __init__.py  __main__.py  _version.py  analytics.py  bootstrap.py  catalog.py  citations.py  cli.py  code_index.py  code_style.py  config.py  convert.py  dataset.py  embed.py  enrich.py  gitfetch.py  ingest.py  inspector.py  mcp_client.py  profiles.py  report.py  report_export.py  report_store.py  runlog.py  search.py  server.py  stdf.py  stdf_analytics.py  store.py  vision.py  wafer.py
src/docusearch/profiles/: __init__.py
tests/: _fakes.py  test_access.py  test_agents.py  test_analytics.py  test_bootstrap.py  test_catalog.py  test_chunk.py  test_citations.py  test_cli.py  test_code_index.py  test_code_ingest.py  test_code_query.py  test_code_style.py  test_config.py  test_convert_office.py  test_corpora.py  test_data_ingest.py  test_data_query.py  test_data_store.py  test_dataset.py  test_discrepancies.py  test_docx.py  test_embed.py  test_enrich.py  test_entrypoint.py  test_extract.py  test_federated.py  test_feedback.py  test_feedback_ranking.py  test_gate6_hardening.py  test_gitfetch.py  test_harness_assets.py  test_hybrid.py  test_ingest_api.py  test_ingest_audit.py  test_ingest_discovery.py  test_ingest_embeddings.py  test_ingest_pipeline.py  test_inspector.py  test_md.py  (+27 more)
