[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "docusearch"
version = "0.1.0"
description = "Enterprise documentation catalog: local BM25 (+ optional vector) search over technical docs and code, with citations, relations, and an MCP/REST surface."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Stephen" }]

# Runtime dependencies are added phase-by-phase (R-REUSE-1/4), each justified in
# WORKLOG DECISIONS.
#   pyyaml     - config (no stdlib YAML parser)                      [Phase 0]
#   selectolax - fast HTML parsing/extraction (lexbor backend, §7)   [Phase 1]
#   numpy      - vector serialization + hybrid math (light)          [Phase 2]
dependencies = [
  "pyyaml>=6.0,<7",
  "selectolax>=0.3.21,<0.4",
  "numpy>=1.26,<3",
]

[project.scripts]
docusearch = "docusearch.cli:main"

[project.optional-dependencies]
# Local hybrid (vector) search. Heavy (torch) — BM25-only users skip it (embed.model:
# none), keeping idle RSS low (R-PERF-4). Both libs are lazy-imported (R-EMB-1).
embeddings = [
  "sentence-transformers>=3.0,<6",
  "hnswlib>=0.8.0",
]
# Server run mode: REST + MCP-over-HTTP host (Phase 3). Lazy-imported so standalone
# search doesn't pull it in.
server = [
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "mcp>=1.2",
]
# Client run mode: thin client that talks to a server_url over HTTP (Phase 3).
client = [
  "httpx>=0.27",
]
# Cloud image enrichment (enrich.vision_images). Off by default; lazy-imported so core
# ingest/search never pull the SDK. The SDK owns the Messages-API request shape, typed
# errors, retries, and credential resolution (env key or `ant auth login` profile).
vision = [
  "anthropic>=0.69",
]
# Developer/validation tooling. Includes every extra so the full suite runs.
dev = [
  "ruff==0.14.0",
  "mypy==1.20.0",
  "pytest==9.0.2",
  "pytest-cov==7.0.0",
  "types-PyYAML==6.0.12.20250915",
  "certifi>=2024.0.0",  # TLS trust for corpora/download.py (harness tooling)
  "sentence-transformers>=3.0,<6",
  "hnswlib>=0.8.0",
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "mcp>=1.2",
  "httpx>=0.27",
  "anthropic>=0.69",
]

[tool.hatch.build.targets.wheel]
packages = ["src/docusearch"]

# ------------------------------------------------------------------ ruff
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "harness", "corpora"]
# redteam/ holds the adversary's independently-written check scripts + findings — a
# record of the red-team pass, not builder code, so it is not held to our lint bar.
extend-exclude = ["redteam"]

[tool.ruff.lint]
# Sensible, low-ceremony rule set. E/F = pyflakes+pycodestyle, I = isort,
# UP = pyupgrade, B = bugbear, SIM = simplify, PTH = prefer pathlib (R-ARCH-5).
select = ["E", "F", "I", "UP", "B", "SIM", "PTH", "W"]
ignore = ["E501"]  # line length handled by the formatter, not the linter

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PTH"]        # tests may use os.path / tmp_path freely

# ------------------------------------------------------------------ mypy
[tool.mypy]
# 3.12 (not 3.11) only because numpy>=2.2 stubs use PEP 695 `type` syntax; our code uses
# no 3.12-only features and the CI matrix still runs pytest on 3.11 at runtime.
python_version = "3.12"
packages = ["docusearch"]
mypy_path = "src"
strict = true
warn_unreachable = true
disallow_untyped_defs = true
no_implicit_reexport = false  # __init__.py re-exports the public API (R-ARCH-2)

[[tool.mypy.overrides]]
module = ["yaml", "sentence_transformers", "hnswlib", "anthropic"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["docusearch.server"]
# FastMCP's @mcp.tool() is a framework decorator we can't type; allow it here only.
disallow_untyped_decorators = false

# ------------------------------------------------------------------ pytest
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
filterwarnings = [
  "error",
  # starlette's TestClient warns to install httpx2; third-party, fires at import.
  "ignore:Using .httpx. with .starlette.testclient. is deprecated",
]
markers = [
  "model: needs a downloaded embedding model (torch); slow. Skip with -m 'not model'.",
]

# ------------------------------------------------------------------ coverage
[tool.coverage.run]
branch = true
source = ["docusearch"]
omit = ["*/__main__.py"]  # trivial entry; exercised by the subprocess smoke test

[tool.coverage.report]
show_missing = true
fail_under = 85  # core modules keep >=85% line coverage (R-PROC-1)
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
]
